# Augmenta

./: .gitignore  LICENSE  README.md  TODO.md  app.py  chains.py  chat.py  classes.py  config.py  constants.py  docQuery.py  embed.py  example-env.env  example.md  flashapp.py  flashcard.py  flashcards.py  get_soundcloud_oauth_token.py  get_spotify_oauth_token.py  helpers.py  manifest.json  models.py  music.py  notebook.ipynb  pipelines.ipynb  pyproject.toml  rag.ipynb  rag.py  ray_serve.py  reformatter.py  requirements.txt  response-example-2.md  response-example.md  response.md  retriever.ipynb  routing.py  run_server.py  sample.txt  send_ray.py  settings.json  (+4 more)
Spotify AI/: .cache  demo.py
documents/: paper.txt
framework/: app.py  chains.py  chat.py  classes.py  constants.py  graph_app.py  rag.py  routing.py  utils.py
framework/FlashcardAI/: flashapp.py  flashcards.py  flashrag.py
framework/config/: config.py  settings.json
framework/data/: manifest.json
framework/flash/: flashapp.py  flashcards.py  flashrag.py  jsonify.py  playground.ipynb
framework/models/: models.py  models.yaml
framework/tests/: test.py
notebooks/: agents.ipynb  gradio.ipynb  notebook.ipynb  notebook_rag.ipynb  retriever.ipynb  vectors.ipynb
spotify/: client.py  core.py
src/: chat.py  flashrag.py  paths.py  research.py
src/agents/: graph_classes.py  tan_graph.py  template.py
src/augmenta/: chains.py  chat.py  classes.py  constants.py  graph_app.py  rag.py  tan_graph.py  utils.py
src/flash/: flashapp.py  flashcard.py  flashcards.py  jsonify.py  manager.py  storage.py  (+1 more)
(+51 files in other folders)
