[tool.poetry]
name = "augmenta"
version = "0.1.0"
description = "Augment your development"
authors = ["Tanuj <Tanuj@cmu.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.9"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.9"
typeguard = "^4.4.1"
pypdf = "^5.1.0"
bs4 = "^0.0.2"
arxiv = "^2.1.3"
pymupdf = "^1.24.14"
pyperclip = "^1.9.0"
python-dotenv = "^1.0.1"
gnureadline = { version = "^8.2.13", markers = "platform_system != 'Windows'" }


[tool.poetry.group.chroma.dependencies]
chromadb = "^0.5.21"


[tool.poetry.group.faiss.dependencies]
faiss-cpu = "^1.9.0.post1"


[tool.poetry.group.providers.dependencies]
langchain-together = "^0.2.0"
langchain-anthropic = "^0.3.0"


[tool.poetry.group.music.dependencies]
spotipy = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
